# sf-matrix

./: .gitignore  .weather_cache.sqlite  CLAUDE.md  README.md  bugs.md  config.example.json  emulator_config.json  install_matrix.sh  location_utils.py  main.py  pyproject.toml  pyvenv.cfg  requirements.txt  run.sh  runtext.py  samplebase.py  scoreboard.py  show_image.py  todo.md
src/data_sources/: bay_wheels.py  espn.py  news.py  sfmta.py  weather.py
src/display/: __init__.py  base.py  controller.py
src/utils/: __init__.py  brightness.py  config.py  fonts.py  logger.py  matrix_import.py
